# docs/swagger.yaml
@@ -54,8 +54,6 @@ definitions:
         type: string
       name:
         type: string
-      parent_category_id:
-        type: integer
     type: object
   controllers.changePasswordInput:
     properties:
@@ -73,13 +71,16 @@ definitions:
       user_id:
         type: integer
     type: object
+  controllers.orderSendInput:
+    properties:
+      resi:
+        type: string
+    type: object
   controllers.productInput:
     properties:
       category_id:
         type: integer
       description:
-        type: string
-      dimension:
         type: string
       name:
         type: string
@@ -89,13 +90,13 @@ definitions:
         type: integer
       shop_id:
         type: integer
+      stock:
+        type: integer
       weight:
         type: integer
     type: object
   controllers.shopInput:
     properties:
-      address_id:
-        type: integer
       bank:
         type: string
       name:
@@ -104,17 +105,6 @@ definitions:
         type: string
       user_id:
         type: integer
-    type: object
-  controllers.shopUpdateInput:
-    properties:
-      address_id:
-        type: integer
-      bank:
-        type: string
-      name:
-        type: string
-      phone:
-        type: string
     type: object
   controllers.userCreateInput:
     properties:
@@ -132,8 +122,8 @@ definitions:
         type: string
       photo_path:
         type: string
-      role_id:
-        type: integer
+      role:
+        type: string
       username:
         type: string
     type: object
@@ -149,8 +139,8 @@ definitions:
         type: string
       photo_path:
         type: string
-      role_id:
-        type: integer
+      role:
+        type: string
     type: object
   models.Address:
     properties:
@@ -187,13 +177,13 @@ definitions:
         type: integer
       name:
         type: string
-      parent_category_id:
-        type: integer
       updated_at:
         type: string
     type: object
   models.Order:
     properties:
+      complete_at:
+        type: string
       courier:
         type: string
       created_at:
@@ -203,6 +193,10 @@ definitions:
       paid_at:
         type: string
       payment:
+        type: string
+      resi:
+        type: string
+      sent_at:
         type: string
       status:
         type: string
@@ -240,8 +234,6 @@ definitions:
         type: string
       desc:
         type: string
-      dimension:
-        type: string
       id:
         type: integer
       name:
@@ -252,6 +244,8 @@ definitions:
         type: integer
       shop_id:
         type: integer
+      stock:
+        type: integer
       updated_at:
         type: string
       weight:
@@ -259,8 +253,6 @@ definitions:
     type: object
   models.Shop:
     properties:
-      address_id:
-        type: integer
       bank:
         type: string
       created_at:
@@ -296,16 +288,125 @@ definitions:
         type: string
       photo_path:
         type: string
-      role_id:
-        type: integer
+      role:
+        type: string
       updated_at:
         type: string
       username:
         type: string
     type: object
 info:
-  contact: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://swagger.io/terms/
 paths:
+  /address:
+    post:
+      description: Creating new Address
+      parameters:
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: the body to create new Address
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.addressInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Address'
+      summary: Create new Address
+      tags:
+      - Buyer
+      - Seller
+  /address/{id}:
+    delete:
+      description: Delete address by id
+      parameters:
+      - description: Address id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: boolean
+            type: object
+      summary: Delete address
+      tags:
+      - Buyer
+      - Seller
+    get:
+      description: Get Address by Id
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Address'
+      summary: Get Address detail
+      tags:
+      - Buyer
+      - Seller
+    put:
+      description: Update Address by id
+      parameters:
+      - description: Address id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: the body to update address
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.addressInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Address'
+      summary: Update Address
+      tags:
+      - Buyer
+      - Seller
   /cart/{id}/:
     delete:
       description: Delete Product from Order
@@ -331,7 +432,7 @@ paths:
             type: object
       summary: Delete Product from Order
       tags:
-      - User
+      - Buyer
     put:
       description: Update Product from Order
       parameters:
@@ -360,7 +461,7 @@ paths:
             $ref: '#/definitions/models.OrderProduct'
       summary: Update Product from Order
       tags:
-      - User
+      - Buyer
   /categories:
     get:
       description: Get a list of Category
@@ -483,14 +584,12 @@ paths:
       - Public
   /login:
     post:
-      description: Logging in to get jwt token to access admin or user api by roles
+      description: Search Product, Shop, Category by keyword
       parameters:
-      - description: the body to login user
-        in: body
-        name: Body
-        required: true
-        schema:
-          $ref: '#/definitions/controllers.LoginInput'
+      - description: keyword of searching
+        in: query
+        name: search
+        type: string
       produces:
       - application/json
       responses:
@@ -499,7 +598,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Login user
+      summary: Search by keyword
       tags:
       - Public
   /orders:
@@ -516,6 +615,7 @@ paths:
             type: array
       summary: Get all Order
       tags:
+      - Buyer
       - Admin
     post:
       description: Creating new Order
@@ -540,7 +640,7 @@ paths:
             $ref: '#/definitions/models.Order'
       summary: Create new Order
       tags:
-      - User
+      - Buyer
   /orders/{id}:
     delete:
       description: Delete order by id
@@ -584,7 +684,8 @@ paths:
             $ref: '#/definitions/models.Order'
       summary: Get Order detail
       tags:
-      - User
+      - Buyer
+      - Admin
     put:
       description: Update Order by id
       parameters:
@@ -613,7 +714,87 @@ paths:
             $ref: '#/definitions/models.Order'
       summary: Update Order
       tags:
-      - User
+      - Buyer
+      - Admin
+  /orders/{id}/complete:
+    post:
+      description: Complete Order by id
+      parameters:
+      - description: Order id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+      summary: Complete Order
+      tags:
+      - Buyer
+  /orders/{id}/pay:
+    post:
+      description: Pay Order by id
+      parameters:
+      - description: Order id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+      summary: Pay Order
+      tags:
+      - Buyer
+  /orders/{id}/send:
+    post:
+      description: Send Order by id
+      parameters:
+      - description: Order id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: the body to update order
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.orderSendInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Order'
+      summary: Send Order
+      tags:
+      - Seller
+      - Admin
   /products:
     get:
       description: Get a list of Product
@@ -657,7 +838,8 @@ paths:
             $ref: '#/definitions/models.Product'
       summary: Create new Product
       tags:
-      - User
+      - Seller
+      - Admin
   /products/{id}:
     delete:
       description: Delete product by id
@@ -683,7 +865,8 @@ paths:
             type: object
       summary: Delete product
       tags:
-      - User
+      - Seller
+      - Admin
     get:
       description: Get Product by Id
       parameters:
@@ -730,8 +913,9 @@ paths:
             $ref: '#/definitions/models.Product'
       summary: Update Product
       tags:
-      - User
-  /products/{id}/order:
+      - Seller
+      - Admin
+  /products/{id}/add-cart:
     post:
       description: Add Product to Order
       parameters:
@@ -754,7 +938,7 @@ paths:
             $ref: '#/definitions/models.Order'
       summary: Add Product to Order
       tags:
-      - User
+      - Buyer
   /register:
     post:
       description: registering user from public access
@@ -819,7 +1003,8 @@ paths:
             $ref: '#/definitions/models.Shop'
       summary: Create new Shop
       tags:
-      - User
+      - Seller
+      - Admin
   /shops/{id}:
     delete:
       description: Delete shop by id
@@ -845,7 +1030,8 @@ paths:
             type: object
       summary: Delete shop
       tags:
-      - User
+      - Seller
+      - Admin
     get:
       description: Get Shop by Id
       parameters:
@@ -882,7 +1068,7 @@ paths:
         name: Body
         required: true
         schema:
-          $ref: '#/definitions/controllers.shopUpdateInput'
+          $ref: '#/definitions/controllers.shopInput'
       produces:
       - application/json
       responses:
@@ -892,7 +1078,8 @@ paths:
             $ref: '#/definitions/models.Shop'
       summary: Update Shop
       tags:
-      - User
+      - Seller
+      - Admin
   /shops/{id}/products:
     get:
       description: Get all Products by ShopId
@@ -979,6 +1166,8 @@ paths:
       summary: Delete user
       tags:
       - Admin
+      - Buyer
+      - Seller
     get:
       description: Get User by Id
       parameters:
@@ -997,6 +1186,8 @@ paths:
       summary: Get User detail
       tags:
       - Admin
+      - Buyer
+      - Seller
     put:
       description: Update User by id
       parameters:
@@ -1026,19 +1217,15 @@ paths:
       summary: Update User
       tags:
       - Admin
-      - User
-  /users/{id}/address:
+      - Buyer
+      - Seller
+  /users/address:
     get:
       description: Get a list of Address
       parameters:
       - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
         in: header
         name: Authorization
-        required: true
-        type: string
-      - description: User id
-        in: path
-        name: id
         required: true
         type: string
       produces:
@@ -1052,126 +1239,10 @@ paths:
             type: array
       summary: Get all Address
       tags:
-      - User
+      - Buyer
+      - Seller
+  /users/change-password:
     post:
-      description: Creating new Address
-      parameters:
-      - description: User id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: the body to create new Address
-        in: body
-        name: Body
-        required: true
-        schema:
-          $ref: '#/definitions/controllers.addressInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Address'
-      summary: Create new Address
-      tags:
-      - User
-  /users/{id}/address/{address_id}:
-    delete:
-      description: Delete address by id
-      parameters:
-      - description: User id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Address id
-        in: path
-        name: address_id
-        required: true
-        type: string
-      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties:
-              type: boolean
-            type: object
-      summary: Delete address
-      tags:
-      - User
-    get:
-      description: Get Address by Id
-      parameters:
-      - description: User id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Address id
-        in: path
-        name: address_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Address'
-      summary: Get Address detail
-      tags:
-      - User
-    put:
-      description: Update Address by id
-      parameters:
-      - description: User id
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Address id
-        in: path
-        name: address_id
-        required: true
-        type: string
-      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: the body to update address
-        in: body
-        name: Body
-        required: true
-        schema:
-          $ref: '#/definitions/controllers.addressInput'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Address'
-      summary: Update Address
-      tags:
-      - User
-  /users/{id}/change-password:
-    put:
       description: Change Password
       parameters:
       - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
@@ -1196,5 +1267,7 @@ paths:
             type: object
       summary: Change Password
       tags:
-      - User
+      - Admin
+      - Buyer
+      - Seller
 swagger: "2.0"
