# routes/routes.go
@@ -22,21 +22,27 @@ func SetupRouter(db *gorm.DB) *gin.Engine {
 	// PUBLIC routes
 	r.POST("/register", controllers.Register)
 	r.POST("/login", controllers.Login)
+	r.GET("/search", controllers.SearchKeyword)
+
+	userAdminRoute := r.Group("/users")
+	userAdminRoute.Use(middlewares.AuthMiddleware(models.UserRoleAdmin))
+	userAdminRoute.GET("/", controllers.GetAllUser)
+	userAdminRoute.POST("/", controllers.CreateUser)
+	userAdminRoute.DELETE("/:id", controllers.DeleteUser)
 
 	userRoute := r.Group("/users")
-	userRoute.GET("/", controllers.GetAllUser)
+	userRoute.Use(middlewares.AuthMiddleware(models.UserRoleBuyer, models.UserRoleSeller, models.UserRoleAdmin))
 	userRoute.GET("/:id", controllers.GetUserById)
-	userRoute.Use(middlewares.AuthMiddleware(models.UserRoleBuyer))
-	userRoute.POST("/", controllers.CreateUser)
 	userRoute.PUT("/:id", controllers.UpdateUser)
-	userRoute.DELETE("/:id", controllers.DeleteUser)
-	userRoute.POST("/:id/change-password", controllers.ChangePassword)
+	userRoute.POST("/change-password", controllers.ChangePassword)
 
-	userRoute.GET("/:id/address/", controllers.GetAllAddress)
-	userRoute.GET("/:id/address/:address_id", controllers.GetAddressById)
-	userRoute.POST("/:id/address/", controllers.CreateAddress)
-	userRoute.PUT("/:id/address/:address_id", controllers.UpdateAddress)
-	userRoute.DELETE("/:id/address/:address_id", controllers.DeleteAddress)
+	addressRoute := r.Group("/address")
+	addressRoute.Use(middlewares.AuthMiddleware(models.UserRoleBuyer, models.UserRoleSeller))
+	addressRoute.GET("/", controllers.GetAllAddress)
+	addressRoute.POST("/", controllers.CreateAddress)
+	addressRoute.GET("/:id", controllers.GetAddressById)
+	addressRoute.PUT("/:id", controllers.UpdateAddress)
+	addressRoute.DELETE("/:id", controllers.DeleteAddress)
 
 	categoryRoute := r.Group("/categories")
 	categoryRoute.GET("/", controllers.GetAllCategory)
@@ -50,7 +56,7 @@ func SetupRouter(db *gorm.DB) *gin.Engine {
 	shopRoute.GET("/", controllers.GetAllShop)
 	shopRoute.GET("/:id", controllers.GetShopById)
 	shopRoute.GET("/:id/products", controllers.GetProductByShopId)
-	shopRoute.Use(middlewares.AuthMiddleware(models.UserRoleAdmin))
+	shopRoute.Use(middlewares.AuthMiddleware(models.UserRoleAdmin, models.UserRoleSeller))
 	shopRoute.POST("/", controllers.CreateShop)
 	shopRoute.PUT("/:id", controllers.UpdateShop)
 	shopRoute.DELETE("/:id", controllers.DeleteShop)
@@ -58,12 +64,14 @@ func SetupRouter(db *gorm.DB) *gin.Engine {
 	productRoute := r.Group("/products")
 	productRoute.GET("/", controllers.GetAllProduct)
 	productRoute.GET("/:id", controllers.GetProductById)
-	productRoute.Use(middlewares.AuthMiddleware(models.UserRoleAdmin))
+	productRoute.Use(middlewares.AuthMiddleware(models.UserRoleAdmin, models.UserRoleSeller))
 	productRoute.POST("/", controllers.CreateProduct)
 	productRoute.PUT("/:id", controllers.UpdateProduct)
 	productRoute.DELETE("/:id", controllers.DeleteProduct)
 
-	productRoute.POST("/:id/add-cart", controllers.AddProductOrder)
+	addCartRoute := r.Group("/products")
+	addCartRoute.Use(middlewares.AuthMiddleware(models.UserRoleBuyer))
+	addCartRoute.POST("/products/:id/add-cart", controllers.AddProductOrder)
 
 	cartRoute := r.Group("/cart")
 	cartRoute.Use(middlewares.AuthMiddleware(models.UserRoleBuyer))
@@ -71,12 +79,16 @@ func SetupRouter(db *gorm.DB) *gin.Engine {
 	cartRoute.DELETE("/:id", controllers.DeleteProductOrder)
 
 	orderRoute := r.Group("/orders")
-	orderRoute.Use(middlewares.AuthMiddleware(models.UserRoleAdmin, models.UserRoleBuyer))
+	orderRoute.Use(middlewares.AuthMiddleware(models.UserRoleBuyer, models.UserRoleSeller, models.UserRoleAdmin))
 	orderRoute.GET("/", controllers.GetAllOrder)
 	orderRoute.GET("/:id", controllers.GetOrderById)
 	orderRoute.POST("/", controllers.CreateOrder)
 	orderRoute.PUT("/:id", controllers.UpdateOrder)
 	orderRoute.DELETE("/:id", controllers.DeleteOrder)
+
+	orderRoute.POST("/:id/pay", controllers.PayOrder)
+	orderRoute.POST("/:id/complete", controllers.CompleteOrder)
+	orderRoute.POST("/:id/send", controllers.SendOrder)
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
